# Scaff

./: .gitignore  CLAUDE.md  README.md  RECOVERY.md  SPEC.md  STATE.md  TASK.txt  dna.json  dna_dialog.md  do-rebuild.cmd  openclaw.json  openclaw.json.pre-rebuild  package.json  pnpm-lock.yaml  query_library.js  query_library.mjs  query_library.py  rebuild.cmd  rebuild.ps1  whitepaper.md
_tmp/: check-active-jobs.mjs  check-archived-jobs.mjs  check-cortex-latest.mjs  check-cortex-recent.mjs  check-cortex-recent2.mjs  check-queue.mjs  check-router.mjs  cortex-cleanup.mjs  cortex-cleanup2.mjs  cortex-latest-msgs.mjs  cortex-latest.mjs  cortex-post-restart.mjs  cortex-recent.mjs  cortex-search.mjs  cortex-today.mjs  debug-ledger.mjs  executor-fix-prompt.md  find-corruption.mjs  kill-all-router.mjs  kill-router-jobs.mjs  purge-tool-loops.mjs  remove-cron-indexer.mjs  test-token-monitor.mjs
completions/: openclaw.bash  openclaw.fish  openclaw.ps1  openclaw.zsh
cortex/: config.json  session-archive-2026-03-09.json
cron/: jobs.json  jobs.json.bak
docs/: cortex-architecture.md  router-architecture.md
router/: config.json
scripts/: backfill-embeddings.ts  backfill-hot-embeddings.mjs  backfill-memory.ts  build-test.mjs  bundle-a2ui.ts  code-index.mjs  code-search.mjs  find-unmigrated.mjs  import-graph.mjs  library-backfill-embeddings.mjs  library-to-graph.mjs  library-to-graph.ts  nightly-code-index.mjs  refresh-hippocampus-context.mjs  seed-hit-counts.ts  seed-memory-v2.mjs  seed-memory.mjs  sync-session-to-hippocampus.mjs  test-audio-e2e.test.ts  test-audio-e2e.ts  ui.js
spec/: test-workspace-access.md
tmp/: TASK-023.md  archive-cortex-session.mjs  check-bus.mjs  check-cold.mjs  check-cold2.mjs  check-feb3-facts.mjs  check-feb3.mjs  check-h1.mjs  check-h1b.mjs  check-hippo.mjs  check.mjs  (+70 more)
tools/cortex-audio/capture/: Cargo.toml  README.md
tools/cortex-audio/capture/src/: chunker.rs  config.rs  lib.rs  mixer.rs  silence.rs
tools/cortex-audio/capture/tests/: sequence_contract.rs
tools/cortex-audio/shipper/: Cargo.toml
tools/cortex-audio/shipper/src/: backoff.rs  lib.rs  upload.rs  watcher.rs
tools/cortex-audio/shipper/tests/: field_contract.rs
tools/cortex-audio/tray/: Cargo.toml  build.rs
tools/cortex-audio/tray/src/: config.rs  main.rs  state.rs
tools/cortex-audio/tray/tests/: shipper_integration.rs
(+827 files in other folders)
