[package]
name = "cortex-audio-shipper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
